cloak to prevent flickering.

--- a/client/src/less/main.less
+++ b/client/src/less/main.less
@@ -116,6 +116,10 @@ h2 {
   background: white;
 }
 
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 
 /**
  * Now that all app-wide styles have been applied, we can load the styles for
